kubernetes/apps/networking/ingresses/ingressRoutes/longhorn/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: longhorn-frontend
          port: 80
          namespace: longhorn-system
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
